# teslausb-ng

./: .gitignore  AGENTS.md  DESIGN.md  Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: integration.yml  test.yml
src/teslausb/: __init__.py  archive.py  cli.py  config.py  coordinator.py  filesystem.py  gadget.py  idle.py  led.py  mount.py  snapshot.py  space.py  temperature.py
tests/: conftest.py  test_archive.py  test_cli_service.py  test_config.py  test_coordinator.py  test_filesystem.py  test_gadget.py  test_idle.py  test_integration.py  test_led.py  test_snapshot.py  test_space.py  test_temperature.py
tests/integration/: __init__.py  conftest.py  test_archive_cycle.py  test_init.py  test_snapshot_space.py  test_status.py
