[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teslausb"
version = "2.0.0"
description = "TeslaUSB Core - Snapshot and Archive Management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TeslaUSB Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
test = [
    "pytest>=7.0",
]

[project.scripts]
teslausb = "teslausb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teslausb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require root, XFS, Docker)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
